[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "spint"
dynamic = ["version"]
authors = [
    { name = "Taylor M. Oshan", email = "tayoshan@gmail.com" },
]
maintainers = [{ name = "PySAL Developers" }]
license = { text = "BSD 3-Clause" }
description = "SPatial INTeraction models"
keywords = ["spatial statistics"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "libpysal>=4.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "spglm>=1.1",
    "spreg>=1.3",
]

[project.urls]
Home = "https://github.com/pysal/spint/"
Repository = "https://github.com/pysal/spint"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "watermark",
]
docs = [
    "myst-parser",
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
]
tests = [
    "codecov",
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
include = ["spint", "spint.*"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
include = ["*.py", "*.ipynb"]

[tool.coverage.run]
source = ["./spint"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["spint/tests/*", "doc/conf.py"]
